Revision history for JSON-Unmarshal

{{$NEXT}}

0.15  2023-07-30T16:39:11-04:00
    - Nominalize type objects first if they're nominalizable
    - Clarify the rule defining deserializable type objects: a nominal with at least one public attribute
    - Consider `is build`-marked attributes as public

0.14  2023-07-25T18:54:32+02:00
    - Tighten up the _unmarshal(%, Mu) candidate to not match Positional|Associative target
    - Panic on Associate data for Positional target
    - Add test of META6 in GH action as a canary

0.13  2023-07-20T22:09:02-04:00
    - When reporting unsued JSON keys report the target type too
    - Fix a bug with incorrect setting of warn/throw mode

0.12  2023-07-19T17:26:55-04:00
    - Extend safety measure by introducing `:warn` and `:die`/`:throw` named arguments
    - Allow non-`Any` classes to be deserialized
    - Added some missing pieces to the documentation

0.11  2022-07-25T10:26:41+02:00
    - Fix trait issue, Siavash++
    - Add some tags

0.10  2022-07-10T20:49:14-04:00
    - Fix a problem with nominalizables when their nominal is a non-default class

0.09  2022-07-10T19:17:33-04:00
    - Support for nominalizable types like definites (smiley types) and coercions
    - Support for input from pre-desrialized data like hashes or arrays obtained from an earlier from-json call
    - Throw specialized `JSON::Unmarshal::X::CannotUnmarshall` exception on errors with more detailed information about the error