@@ -1,4 +1,4 @@
-name: test
+name: MacOS
 
 on:
   push:
@@ -13,20 +13,20 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
           - macos-latest
-          - windows-latest
         raku-version:
           - 'latest'
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
+      - name: Install NotmuchMail
+        run: brew install notmuch
+      - name: Make NotMuchMailD reachable
+        run: raku -e 'symlink "/opt/homebrew/lib/libnotmuch.5.dylib".IO, $*EXECUTABLE.parent.sibling("lib/libnotmuch.5.dylib")'
       - name: Install Dependencies
         run: zef install --/test --test-depends --deps-only .
-      - name: Install App::Prove6
-        run: zef install --/test App::Prove6
-      - name: Run Tests
-        run: prove6 -I. t
+      - name: Run Special Tests
+        run: raku run-tests -i
