@@ -2,7 +2,7 @@ name = JSON-Unmarshal
 
 [ReadmeFromPod]
 ; enabled = false
-filename = lib/JSON/Unmarshal.rakumod
+filename = doc/JSON-Unmarshal.rakudoc
 
 [UploadToZef]
 
@@ -10,4 +10,6 @@ filename = lib/JSON/Unmarshal.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
