@@ -1,6 +1,9 @@
 Revision history for JSON-Unmarshal
 
 {{$NEXT}}
+    - Add CI badge for each OS
+    - Modernized file extensions (where they weren't yet)
+    - Modernized pod a bit
 
 0.15  2023-07-30T16:39:11-04:00
     - Nominalize type objects first if they're nominalizable
